Downgrade github actions to use ubuntu 20.04
Python3.6 is not available any more on ubuntu-latest (22.04)

Signed-off-by: j.cuquemelle <j.cuquemelle@criteo.com>

--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -41,7 +41,7 @@ defaults:
 
 jobs:
   set-matrix:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
       is_matrix_empty: ${{ steps.set-matrix.outputs.is_matrix_empty }}
@@ -94,7 +94,7 @@ jobs:
   test:
     needs: set-matrix
     if: ${{ needs.set-matrix.outputs.is_matrix_empty == 'false' }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.set-matrix.outputs.matrix) }}
