--- a/.github/workflows/labeling.yml
+++ b/.github/workflows/labeling.yml
@@ -16,7 +16,7 @@ defaults:
 
 jobs:
   labeling:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - uses: harupy/auto-labeling@master
