--- a/.github/workflows/notify-dco-failure.yml
+++ b/.github/workflows/notify-dco-failure.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   notify:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions/github-script@v4
