--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -11,7 +11,7 @@ defaults:
 
 jobs:
   check-comment:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, 'autoformat') }}
     outputs:
       matched: ${{ steps.check-comment.outputs.result }}
@@ -39,7 +39,7 @@ jobs:
             return await autoformat.createStatus(context, github, core);
 
   check-diff:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: check-comment
     if: ${{ needs.check-comment.outputs.matched == 'true' }}
     outputs:
@@ -65,7 +65,7 @@ jobs:
 
   python:
     # Generate a patch to format python files.
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [check-comment, check-diff]
     if: ${{ needs.check-diff.outputs.py_changed == 'true' }}
     outputs:
@@ -100,7 +100,7 @@ jobs:
 
   ui:
     # Generate a patch to format files for MLflow UI.
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [check-comment, check-diff]
     if: ${{ needs.check-diff.outputs.ui_changed == 'true' }}
     outputs:
@@ -139,7 +139,7 @@ jobs:
 
   apply-patches:
     # Apply the patches and commit changes to the PR branch.
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [check-comment, check-diff, python, ui]
     if: |
       always() &&
@@ -178,7 +178,7 @@ jobs:
           git push
 
   update-status:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: [check-comment, check-diff, python, ui, apply-patches]
     if: ${{ always() && needs.check-comment.outputs.matched == 'true' }}
     steps:
