--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -466,6 +466,7 @@ transformers:
     minimum: "4.25.1"
     maximum: "4.27.4"
     requirements:
-      ">= 0.0.0": ["datasets", "huggingface_hub", "torch", "torchvision", "tensorflow"]
+      ">= 0.0.0":
+        ["datasets", "huggingface_hub", "torch", "torchvision", "tensorflow", "accelerate"]
     run: |
       pytest tests/transformers/test_transformers_model_export.py
