--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -122,11 +122,11 @@ jobs:
       - if: steps.diff.outputs.js == 'true'
         working-directory: mlflow/server/js
         run: |
-          yarn run lint:fix
+          yarn lint:fix
       - if: steps.diff.outputs.js == 'true'
         working-directory: mlflow/server/js
         run: |
-          yarn run extract-i18n
+          yarn i18n
       # ************************************************************************
       # R
       # ************************************************************************
