--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -45,15 +45,16 @@ jobs:
         run: |
           echo "::remove-matcher owner=eslint-compact::"
           echo "::remove-matcher owner=eslint-stylish::"
-      - name: Install dependencies
+      - name: Install dependencies (windows)
+        if: runner.os == 'Windows'
         run: |
-          if [ "${{ runner.os }}" = "Windows" ]; then
-            # On Windows, `yarn install` changes hash of @databricks/design-system in yarn.lock.
-            # Use `--no-immutable` to allow the change.
-            yarn install --no-immutable
-          else
-            yarn install --immutable
-          fi
+          # On Windows, `yarn install` changes hash of @databricks/design-system in yarn.lock.
+          # Use `--no-immutable` to allow the change.
+          yarn install --no-immutable
+      - name: Install dependencies (non-windows)
+        if: runner.os != 'Windows'
+        run: |
+          yarn install --immutable
       - name: Run lint
         run: |
           yarn lint
