git diff after yarn install
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -51,6 +51,7 @@ jobs:
           # On Windows, `yarn install` changes hash of @databricks/design-system in yarn.lock.
           # Use `--no-immutable` to allow the change.
           yarn install --no-immutable
+          git diff
       - name: Install dependencies (non-windows)
         if: runner.os != 'Windows'
         run: |
