Fix shell command
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -173,11 +173,11 @@ jobs:
           # in pip 23.1. See https://github.com/pypa/pip/issues/8368 more details.
           if [ "${{ matrix.package }}==${{ matrix.version }}" = "prophet==1.0.1" ]
           then
-            pip install -U pip<23.1
+            PIP_SPEC="<23.1"
           else
-            pip install -U pip
+            PIP_SPEC=""
           fi
-          pip install -U wheel
+          pip install -U "pip$PIP_SPEC" wheel
           pip install -e .[extras]
           pip install -r requirements/test-requirements.txt
       - name: Install ${{ matrix.package }} ${{ matrix.version }}
