Avoid using pip 23.1 when installing `prophet==1.0.1` (#8247)
* Avoid using pip 23.1 when installing prophet==1.0.1

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Fix comment

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Fix shell command

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Pin pandas

Signed-off-by: harupy <hkawamura0130@gmail.com>

---------

Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -169,7 +169,15 @@ jobs:
       - name: Install mlflow & test dependencies
         run: |
           python --version
-          pip install --upgrade pip wheel
+          # prophet==1.0.1 can only be installed `setup.py install` fallback but this was removed
+          # in pip 23.1. See https://github.com/pypa/pip/issues/8368 more details.
+          if [ "${{ matrix.package }}==${{ matrix.version }}" = "prophet==1.0.1" ]
+          then
+            PIP_SPEC="<23.1"
+          else
+            PIP_SPEC=""
+          fi
+          pip install -U "pip$PIP_SPEC" wheel
           pip install -e .[extras]
           pip install -r requirements/test-requirements.txt
       - name: Install ${{ matrix.package }} ${{ matrix.version }}
