Implement langchain flavor (#8197)
* core save load log

Signed-off-by: Liang Zhang <liang.zhang@databricks.com>

* first test passed

Signed-off-by: Liang Zhang <liang.zhang@databricks.com>

* add some tests

Signed-off-by: Liang Zhang <liang.zhang@databricks.com>

* add some tests

Signed-off-by: Liang Zhang <liang.zhang@databricks.com>

* Adding examples, docs, requirements for langchain

Signed-off-by: Sunish Sheth <sunishsheth2009@gmail.com>

* Adding examples, docs, requirements for langchain

Signed-off-by: Sunish Sheth <sunishsheth2009@gmail.com>

* Adding tests and fixing some gaps

Signed-off-by: Sunish Sheth <sunishsheth2009@gmail.com>

* Resolving comments

Signed-off-by: Sunish Sheth <sunishsheth2009@gmail.com>

* edit docstrings

Signed-off-by: Liang Zhang <liang.zhang@databricks.com>

* edit docstrings

Signed-off-by: Liang Zhang <liang.zhang@databricks.com>

* address some comments

Signed-off-by: Liang Zhang <liang.zhang@databricks.com>

* add experimental

Signed-off-by: Liang Zhang <liang.zhang@databricks.com>

* remove unused env var

Signed-off-by: Liang Zhang <liang.zhang@databricks.com>

* remove unused env var

Signed-off-by: Liang Zhang <liang.zhang@databricks.com>

* Adding batch langchain predict

Signed-off-by: Sunish Sheth <sunishsheth2009@gmail.com>

* Updating comments for langchain docs

Signed-off-by: Sunish Sheth <sunishsheth2009@gmail.com>

---------

Signed-off-by: Liang Zhang <liang.zhang@databricks.com>
Signed-off-by: Sunish Sheth <sunishsheth2009@gmail.com>
Co-authored-by: Sunish Sheth <sunishsheth2009@gmail.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -485,3 +485,18 @@ openai:
       export MLFLOW_OPENAI_TESTING=true
       export OPENAI_API_KEY=test
       pytest tests/openai/test_openai_model_export.py
+
+langchain:
+  package_info:
+    pip_release: "langchain"
+    install_dev: |
+      pip install git+https://github.com/hwchase17/langchain
+  models:
+    minimum: "0.0.139"
+    maximum: "0.0.141"
+    requirements:
+      ">= 0.0.0": ["pyspark", "transformers", "tensorflow"]
+    run: |
+      export MLFLOW_OPENAI_TESTING=true
+      export OPENAI_API_KEY=test
+      pytest tests/langchain/test_langchain_model_export.py
