fix cross version tests for langchain (#8262)
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -495,7 +495,7 @@ langchain:
     minimum: "0.0.139"
     maximum: "0.0.143"
     requirements:
-      ">= 0.0.0": ["pyspark", "transformers", "tensorflow"]
+      ">= 0.0.0": ["pyspark", "transformers", "tensorflow", "openai"]
     run: |
       export MLFLOW_OPENAI_TESTING=true
       export OPENAI_API_KEY=test
