Exclude pypi_package_index.py
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ force-exclude = '''
 /(
     mlflow/protos/
   | mlflow/ml_package_versions\.py$
+  | mlflow/pypi_package_index\.py$
   | tests/protos/
   | examples/recipes/
 )
