--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -310,7 +310,7 @@ jobs:
           pip install -r requirements/test-requirements.txt
           pip install --no-dependencies tests/resources/mlflow-test-plugin
           pip install -e .[extras]
-          pip install pyspark
+          pip install pyspark<3.4
           pip install mleap
           # Install Hugging Face datasets to test Hugging Face usage with MLflow dataset tracking
           pip install datasets
