rename root to admin Signed-off-by: Gabriel Fu <hfu.gabriel@gmail.com>

--- a/mlflow/server/auth/basic_auth.ini
+++ b/mlflow/server/auth/basic_auth.ini
@@ -1,5 +1,5 @@
 [mlflow]
 default_permission = READ
 database_uri = sqlite:///basic_auth.db
-root_username = root
-root_password = password
+admin_username = root
+admin_password = password
