--- a/mlflow/server/auth/basic_auth.ini
+++ b/mlflow/server/auth/basic_auth.ini
@@ -1,5 +1,5 @@
 [mlflow]
 default_permission = READ
 database_uri = sqlite:///basic_auth.db
-admin_username = root
+admin_username = admin
 admin_password = password
