--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -82,7 +82,7 @@ tensorflow:
     maximum: "2.12.0"
     requirements:
       # Requirements to run tests for keras
-      ">= 0.0.0": ["scikit-learn", "pyspark", "pyarrow", "transformers"]
+      ">= 0.0.0": ["scikit-learn", "pyspark", "pyarrow", "transformers", "numpy<=1.23"]
       "< 2.6.0": ["protobuf<4.0.0"]
       "< 2.7.0": ["pandas==1.3.5"]
       # TensorFlow 2.3.4, 2.4.4, 2.5.3, and 2.6.5 are incompatible with SQLAlchemy 2.x due to
@@ -191,6 +191,8 @@ gluon:
     minimum: "1.5.1"
     maximum: "1.9.1"
     unsupported: ["1.8.0"] # MXNet 1.8.0 is a flawed release that we don't expect to work with
+    requirements:
+      ">= 0.0.0": [ "numpy<=1.23" ]
     run: |
       # Install libopenblas-dev for mxnet 1.8.0.post0
       sudo apt-get update -y
@@ -201,6 +203,8 @@ gluon:
     minimum: "1.5.1"
     maximum: "1.9.1"
     unsupported: ["1.8.0"] # MXNet 1.8.0 is a flawed release that we don't expect to work with
+    requirements:
+      ">= 0.0.0": [ "numpy<=1.23" ]
     run: |
       pytest tests/gluon/test_gluon_autolog.py
 
@@ -252,7 +256,7 @@ onnx:
     minimum: "1.7.0"
     maximum: "1.13.1"
     requirements:
-      ">= 0.0.0": ["onnxruntime", "torch", "scikit-learn", "protobuf<4.0.0"]
+      ">= 0.0.0": ["onnxruntime", "torch", "scikit-learn", "protobuf<4.0.0", "numpy<=1.23"]
     run: |
       pytest tests/onnx/test_onnx_model_export.py
 
@@ -364,6 +368,7 @@ mleap:
     requirements:
       "> 0.17.0, < 0.21.0": ["pyspark==3.0.2"]
       ">= 0.21.0": ["pyspark<3.4"]
+      ">= 0.0.0": [ "numpy<=1.23" ]
     run: |
       SAGEMAKER_OUT=$(mktemp)
       if mlflow sagemaker build-and-push-container --no-push --mlflow-home . > $SAGEMAKER_OUT 2>&1; then
@@ -440,6 +445,8 @@ shap:
   models:
     minimum: "0.41.0"
     maximum: "0.41.0"
+    requirements:
+      ">= 0.0.0": [ "numpy<=1.23" ]
     run: |
       pytest tests/shap
 
