fix models test failures
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -247,6 +247,7 @@ jobs:
       - uses: ./.github/actions/setup-java
       - name: Install dependencies
         run: |
+          pip install numpy<1.24.0
           source ./dev/install-common-deps.sh
           pip install pyspark
       - name: Run tests
