format install correctly
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -248,7 +248,7 @@ jobs:
       - name: Install dependencies
         run: |
           source ./dev/install-common-deps.sh
-          pip install pyspark numpy<1.24.0
+          pip install pyspark "numpy<1.24.0"
       - name: Run tests
         run: |
           export MLFLOW_HOME=$(pwd)
