--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -191,8 +191,7 @@ gluon:
     minimum: "1.5.1"
     maximum: "1.9.1"
     requirements:
-      # numpy type declarations are fully deprecated
-      ">= 1.6.0": ["numpy<1.24.0"]
+      "<= 1.9.1": ["numpy<1.24.0"]
     unsupported: ["1.8.0"] # MXNet 1.8.0 is a flawed release that we don't expect to work with
     run: |
       # Install libopenblas-dev for mxnet 1.8.0.post0
@@ -204,8 +203,7 @@ gluon:
     minimum: "1.5.1"
     maximum: "1.9.1"
     requirements:
-      # numpy type declarations are fully deprecated
-      ">= 1.6.0": ["numpy<1.24.0"]
+      "<= 1.9.1": ["numpy<1.24.0"]
     unsupported: ["1.8.0"] # MXNet 1.8.0 is a flawed release that we don't expect to work with
     run: |
       pytest tests/gluon/test_gluon_autolog.py
@@ -449,7 +447,7 @@ shap:
     minimum: "0.41.0"
     maximum: "0.41.0"
     requirements:
-      ">= 0.0.0": ["numpy<1.24.0"]
+      "<= 0.41.0": ["numpy<1.24.0"]
     run: |
       pytest tests/shap
 
