--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -143,7 +143,9 @@ lightgbm:
   package_info:
     pip_release: "lightgbm"
     install_dev: |
-      pip install git+https://github.com/microsoft/LightGBM.git#subdirectory=python-package
+      git clone --recursive https://github.com/microsoft/LightGBM --depth=1
+      cd LightGBM
+      bash build-python.sh install
 
   models:
     minimum: "2.3.1"
