--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -480,6 +480,23 @@ transformers:
         ["datasets", "huggingface_hub", "torch", "torchvision", "tensorflow", "accelerate"]
     run: |
       pytest tests/transformers/test_transformers_model_export.py
+  autologging:
+    minimum: "4.25.1"
+    maximum: "4.28.1"
+    requirements:
+      ">= 0.0.0":
+        [
+          "datasets",
+          "huggingface_hub",
+          "torch",
+          "torchvision",
+          "tensorflow",
+          "accelerate",
+          "setfit",
+          "optuna",
+        ]
+    run: |
+      pytest tests/transformers/test_transformers_autolog.py
 
 openai:
   package_info:
