Adjust numpy requirements for gluon tests (#8412)
* Adjust numpy requirement

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Add comments

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Update comments

Signed-off-by: harupy <hkawamura0130@gmail.com>

---------

Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -193,7 +193,9 @@ gluon:
     minimum: "1.5.1"
     maximum: "1.9.1"
     requirements:
-      "<= 1.9.1": ["numpy<1.24.0"]
+      # TODO: Adjust the numpy requirement once https://github.com/apache/mxnet/issues/21165 is fixed,
+      # which is unlikely to happen given the fact it's been open for 4 months.
+      ">= 0.0.0": ["numpy<1.24.0"]
     unsupported: ["1.8.0"] # MXNet 1.8.0 is a flawed release that we don't expect to work with
     run: |
       # Install libopenblas-dev for mxnet 1.8.0.post0
@@ -205,7 +207,9 @@ gluon:
     minimum: "1.5.1"
     maximum: "1.9.1"
     requirements:
-      "<= 1.9.1": ["numpy<1.24.0"]
+      # TODO: Adjust the numpy requirement once https://github.com/apache/mxnet/issues/21165 is fixed,
+      # which is unlikely to happen given the fact it's been open for 4 months.
+      ">= 0.0.0": ["numpy<1.24.0"]
     unsupported: ["1.8.0"] # MXNet 1.8.0 is a flawed release that we don't expect to work with
     run: |
       pytest tests/gluon/test_gluon_autolog.py
