--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -481,7 +481,15 @@ transformers:
     maximum: "4.28.1"
     requirements:
       ">= 0.0.0":
-        ["datasets", "huggingface_hub", "torch", "torchvision", "tensorflow", "accelerate"]
+        [
+          "datasets",
+          "huggingface_hub",
+          "torch",
+          "torchvision",
+          "tensorflow",
+          "accelerate",
+          "librosa",
+        ]
     run: |
       pytest tests/transformers/test_transformers_model_export.py
   autologging:
