--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -489,6 +489,7 @@ transformers:
           "tensorflow",
           "accelerate",
           "librosa",
+          "ffmpeg",
         ]
     run: |
       pytest tests/transformers/test_transformers_model_export.py
