--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -487,9 +487,9 @@ transformers:
           "torch",
           "torchvision",
           "tensorflow",
-          "accelerate",
-          "librosa",
-          "ffmpeg",
+          "accelerate",  # required for large torch models where weights will not fit in RAM
+          "librosa",  # required for transformers audio pipelines for bitrate conversion
+          "ffmpeg",  # required for transformers audio pipelines for audio byte to numpy conversion
         ]
     run: |
       pytest tests/transformers/test_transformers_model_export.py
