--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -485,8 +485,16 @@ transformers:
     minimum: "4.25.1"
     maximum: "4.28.1"
     requirements:
-      ">= 0.0.0":
-        ["datasets", "huggingface_hub", "torch", "torchvision", "tensorflow", "accelerate"]
+      ">= 0.0.0": [
+          "datasets",
+          "huggingface_hub",
+          "torch",
+          "torchvision",
+          "tensorflow",
+          "accelerate", # required for large torch models where weights will not fit in RAM
+          "librosa", # required for transformers audio pipelines for bitrate conversion
+          "ffmpeg", # required for transformers audio pipelines for audio byte to numpy conversion
+        ]
     run: |
       pytest tests/transformers/test_transformers_model_export.py
   autologging:
