Add sentence-transformers as a named flavor (#8479)
* WIP

Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

* Add basic serialization functionality for sentence-transformers

Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

* fix docs linting

Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

* fix lint and test

Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

* remove useless kwargs entries

Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

---------

Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -545,3 +545,16 @@ langchain:
       export OPENAI_API_KEY=test
       export SERPAPI_API_KEY=test
       pytest tests/langchain/test_langchain_model_export.py
+
+sentence_transformers:
+  package_info:
+    pip_release: "sentence-transformers"
+    install_dev: |
+      pip install -e git+https://github.com/UKPLab/sentence-transformers
+    models:
+      minimum: "2.2.2"
+      maximum: "2.2.2"
+      requirements:
+        ">= 0.0.0": ["torch>1.6", "transformers>4.25"]
+      run: |
+        pytest tests/sentence_transformers/test_sentence_transformers_model_export.py
