--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Run pre-commit (pylint)
         run: |
           changed_files=$(python dev/list_changed_files.py --repository mlflow/mlflow --pr-num ${{ github.event.number }})
-          if [ -z "$(echo $changed_files | grep '\.py$')"]; then
+          if [ ! -z "$(echo $changed_files | grep '\.py$')"]; then
             pre-commit run --color=always --all-files pylint
           fi
       - name: Update error messages
