feat(docker): build multi-arch images
Signed-off-by: David van der Spek <vanderspek.david@gmail.com>

--- a/.github/workflows/push-images.yml
+++ b/.github/workflows/push-images.yml
@@ -50,6 +50,7 @@ jobs:
           context: docker
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+          platforms: linux/amd64,linux/arm64
           build-args: |
             VERSION=${{ steps.meta.outputs.version }}
 
