--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -402,8 +402,10 @@ prophet:
     minimum: "1.0.1"
     maximum: "1.1.2"
     requirements:
-      # Avoid holidays 0.25 due to https://github.com/dr-prodigy/python-holidays/issues/1200
-      ">= 0.0.0": ["holidays!=0.25"]
+      # Avoid holidays 0.25 due to https://github.com/dr-prodigy/python-holidays/issues/1200 on
+      # older version of prophet. Compatibility updates have been released as part of the 1.1.4
+      # release of prophet.
+      "<= 1.1.3": ["holidays<=0.24"]
     run: |
       pytest tests/prophet/test_prophet_model_export.py
 
@@ -538,7 +540,8 @@ langchain:
     minimum: "0.0.169"
     maximum: "0.0.169"
     requirements:
-      ">= 0.0.0": ["pyspark", "transformers", "tensorflow", "openai", "google-search-results"]
+      ">= 0.0.0":
+        ["pyspark", "transformers", "tensorflow", "openai", "google-search-results", "psutil"]
     run: |
       pytest tests/langchain/test_langchain_model_export.py
 
