--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -350,10 +350,7 @@ jobs:
           pip install -r requirements/test-requirements.txt
           pip install --no-dependencies tests/resources/mlflow-test-plugin
           pip install -e .[extras]
-          # NB: Delta is not currently compatible with PySpark 3.4. Delta is required for
-          # testing MLflow dataset tracking.
-          # TODO: Unpin this once Delta supports PySpark 3.4
-          pip install "pyspark<3.4"
+          pip install pyspark
           pip install mleap
           # Install Hugging Face datasets to test Hugging Face usage with MLflow dataset tracking
           pip install datasets
