Unpin pypsark in recipes
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.github/workflows/recipe.yml
+++ b/.github/workflows/recipe.yml
@@ -52,8 +52,7 @@ jobs:
         run: |
           source ./dev/install-common-deps.sh
           pip install -e .
-          # TODO: Unpin once Delta supports Spark 3.3 (https://github.com/delta-io/delta/issues/1217)
-          pip install 'pyspark<3.3'
+          pip install pyspark
       - name: Run tests
         run: |
           export MLFLOW_HOME=$(pwd)
@@ -71,10 +70,8 @@ jobs:
         run: |
           pip install -r requirements/test-requirements.txt
           pip install --no-dependencies tests/resources/mlflow-test-plugin
-          pip install -e .[extras]
           pip install -e .
-          # TODO: Unpin once Delta supports Spark 3.3 (https://github.com/delta-io/delta/issues/1217)
-          pip install 'pyspark<3.3'
+          pip install pyspark
       - name: Download Hadoop winutils for Spark
         run: |
           git clone https://github.com/cdarlint/winutils
