--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -557,3 +557,12 @@ sentence_transformers:
         ">= 0.0.0": ["torch>1.6", "transformers>4.25"]
       run: |
         pytest tests/sentence_transformers/test_sentence_transformers_model_export.py
+
+johnsnowlabs:
+  package_info:
+    pip_release: "johnsnowlabs"
+    models:
+      minimum: "4.4.6"
+      maximum: "4.4.6"
+      run: |
+        pytest tests/johnsnowlabs/test_jsl_api.py
