--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -193,7 +193,7 @@ jobs:
           MLFLOW_CONDA_HOME: /usr/share/miniconda
           SPARK_LOCAL_IP: localhost
           PACKAGE_VERSION: ${{ matrix.version }}
-          JSL_ACCESS_KEY: ${{ secrets.JSL_ACCESS_KEY }}
+          JOHNSNOWLABS_LICENSE_JSON: ${{ secrets.JOHNSNOWLABS_LICENSE_JSON }}
         run: |
           export MLFLOW_HOME=$(pwd)
           ${{ matrix.run }}
