add pyspark dep for new tests
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -554,6 +554,6 @@ sentence_transformers:
     minimum: "2.2.2"
     maximum: "2.2.2"
     requirements:
-      ">= 0.0.0": ["torch>1.6", "transformers>4.25"]
+      ">= 0.0.0": ["pyspark", "torch>1.6", "transformers>4.25"]
     run: |
       pytest tests/sentence_transformers/test_sentence_transformers_model_export.py
