--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -565,6 +565,6 @@ johnsnowlabs:
     minimum: "4.4.6"
     maximum: "4.4.6"
     requirements:
-      ">= 0.0.0": ["pandas<=1.5.3"]
+      ">= 0.0.0": ["pandas<=1.5.3", "pyspark<3.4"]
     run: |
       pytest tests/johnsnowlabs/test_jsl_api.py
