--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -51,6 +51,8 @@ jobs:
       - run: |
           df -h
           sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
           df -h
       - uses: ./.github/actions/setup-python
       - uses: ./.github/actions/cache-pip
